Enable lint and errorprone checks in Jdk11 (#289)
* Enable lint and errorprone checks in Jdk11

* Create separate profile/step for lint checks